Comment out curiosity section for preliminary arxiv post

--- a/paper/sections/implementation.tex
+++ b/paper/sections/implementation.tex
@@ -107,7 +107,7 @@ experiments we observe the minimum objective to decrease only a small number of 
 \vspace{-1mm}
 \end{kdd}
 
-\begin{arxiv}
+\begin{comment}
 \section{Curiosity}
 
 We introduce a custom priority metric that we call \emph{curiosity}:
@@ -140,7 +140,7 @@ misclassification error and the expected regularization penalty:
   \Cap(x_n, p_k \given \Prefix) \wedge \one [ q_k \neq y_n ] \right)
   + \frac{\Reg K N}{\NCap} = \Curiosity(\Prefix, \x, \y).
 \end{align}
-\end{arxiv}
+\end{comment}
 
 %\section{Implementation architecture}
 %
