Thank Hongyu and Ben for help and code

--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -75,11 +75,16 @@
 
 % Acknowledgements should go at the end, before appendices and references
 \acks{E.A. is supported by the Miller Institute for Basic Research in Science,
-University of California, Berkeley, and is hosted by Prof. M.I. Jordan
-at RISELab.  C.D.R. is supported in part by MIT-Lincoln Labs.
+University of California, Berkeley, and is hosted by Prof. M.I. Jordan at RISELab.
+%
+C.D.R. is supported in part by MIT-Lincoln Labs.
+%
 E.A. would like to thank E. Jonas, E. Kohler, and S. Tu for early implementation
 guidance, J. Schleier-Smith for helpful conversations, and
 members of SAIL and the UC Berkeley Database Group for their support and feedback.
+%
+We thank H.~Yang and B.~Letham for sharing advice and code for processing data
+and mining rules.
 }
 
 \vskip 0.2in
