Add reference to Goel et al

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -83,6 +83,19 @@ journal={ProPublica},
 year={2016}
 }
 
+@article{Goel16,
+author = {Goel, Sharad and Rao, Justin M. and Shroff, Ravi},
+fjournal = "The Annals of Applied Statistics",
+journal = "Ann. Appl. Stat.",
+month = "03",
+number = "1",
+pages = "365--394",
+publisher = "The Institute of Mathematical Statistics",
+title = "Precinct or prejudice? Understanding racial disparities in New York City’s stop-and-frisk policy",
+volume = "10",
+year = "2016"
+}
+
 @article{BellazziZu08,
 title={Predictive data mining in clinical medicine: current issues and guidelines.},
 __author={Ricardo Bellazzi and Blaz Zupan},
