Minor edits (cite to citet, increase size of Fig 3)

--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -69,8 +69,8 @@ an extensive evaluation contained in a long version of this report (in preparati
 \end{kdd}
 %
 We focus on two problems:
-using the ProPublica dataset~\cite{LarsonMaKiAn16} to predict two-year recidivism,
-and using the NYCLU 2014 stop-and-frisk dataset~\cite{nyclu:2014} to predict
+using the ProPublica dataset~\citep{LarsonMaKiAn16} to predict two-year recidivism,
+and using the NYCLU 2014 stop-and-frisk dataset~\citep{nyclu:2014} to predict
 whether a weapon will be found on a stopped individual who is frisked or searched.
 
 We first ran a 10-fold cross validation experiment using CORELS and eight other
