Pointers to public repo https://github.com/nlarusstone/corels

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -78,9 +78,11 @@ could potentially be used by police officers to effectively frisk or search
 stopped individuals only when these interventions are likely to discover
 criminal possession of a weapon.
 
-We first ran a 10-fold cross validation experiment using CORELS and eight other
-algorithms:
-logistic regression, support vector machines, AdaBoost, CART, C4.5, random forests, RIPPER, and scalable Bayesian rule lists (SBRL).~\footnote{For SBRL, we use the C implementation at \url{https://github.com/Hongyuy/sbrlmod}.}
+We first ran a 10-fold cross validation experiment using CORELS
+and eight other algorithms:
+logistic regression, support vector machines, AdaBoost, CART, C4.5,
+random forests, RIPPER, and scalable Bayesian rule lists (SBRL).~\footnote{For
+SBRL, we use the C implementation at \url{https://github.com/Hongyuy/sbrlmod}.}
 %
 We use standard R packages, with default parameter settings,
 for the first seven algorithms.~\footnote{For CART, C4.5 (J48), and RIPPER,
