--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -219,7 +219,14 @@ We produce certifiably optimal, interpretable rule lists that achieve
 the same accuracy as approaches such as random forests.
 %
 This calls into question the need for use of a proprietary,
+\begin{kdd}
 black box algorithm for recidivism prediction.
+\end{kdd}
+\begin{arxiv}
+black box algorithm for recidivism prediction. \\
+
+Our implementation of CORELS is at \textbf{\url{https://github.com/nlarusstone/corels}}.
+\end{arxiv}
 
 %\bibliographystyle{abbrvnat}
 %\bibliography{refs}
