Acks for Alex and Eric

--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -80,7 +80,8 @@ University of California, Berkeley, and is hosted by Prof. M.I. Jordan at RISELa
 C.D.R. is supported in part by MIT-Lincoln Labs.
 %
 E.A. would like to thank E. Jonas, E. Kohler, and S. Tu for early implementation
-guidance, J. Schleier-Smith for helpful conversations, and
+guidance, A.~D'Amour for pointing out the work by~\citet{Goel16},
+J.~Schleier-Smith and E.~Thewalt for helpful conversations, and
 members of SAIL and the UC Berkeley Database Group for their support and feedback.
 %
 We thank H.~Yang and B.~Letham for sharing advice and code for processing data
