Add citation for Nicholas thesis and some other bib formatting

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -1,5 +1,6 @@
 @unpublished{RudinEr15,
-author={Cynthia Rudin and Seyda Ertekin},
+__author={Cynthia Rudin and Seyda Ertekin},
+author={C. Rudin and S. Ertekin},
 title={Learning Optimized Lists of Rules with Mathematical Programming},
 year={2015},
 note={Unpublished}
@@ -36,10 +37,10 @@ title={Cost-sensitive and Interpretable Dynamic Treatment Regimes Based on Rule 
  address = {Hingham, MA, USA}
 }
 
-@unpublished{Goessling2015,
+@article{Goessling2015,
    author = {M. Goessling and S. Kang},
     title = {Directional Decision Lists},
-  note = {ArXiv e-prints 1508.07643},
+  journal = {Preprint at arXiv:1508.07643},
      year = {2015},
     month = {Aug}
 }
@@ -84,7 +85,8 @@ year={2016}
 }
 
 @article{Goel16,
-author = {Goel, Sharad and Rao, Justin M. and Shroff, Ravi},
+__author = {Goel, Sharad and Rao, Justin M. and Shroff, Ravi},
+author = {Goel, S. and Rao, J. M. and Shroff, R.},
 fjournal = "The Annals of Applied Statistics",
 journal = "Ann. Appl. Stat.",
 month = "03",
@@ -334,15 +336,15 @@ year={2015}
 
 @ARTICLE{ZhangEtAl15,
    author = {{Zhang}, Y. and {Laber}, E.~B. and {Tsiatis}, A. and {Davidian}, M.},
-    title = "{Using Decision Lists to Construct Interpretable and Parsimonious Treatment Regimes}",
-  journal = {ArXiv e-prints},
+    title = {Using Decision Lists to Construct Interpretable and Parsimonious Treatment Regimes},
+  journal = {Preprint at arXiv:1504.07715},
      year = 2015,
     month = apr,
  }
 
 @INPROCEEDINGS{Auer95theoryand,
     author = {Peter Auer and Robert C. Holte and Wolfgang Maass},
-    title = {Theory and Applications of Agnostic PAC-Learning with Small Decision Trees},
+    title = {Theory and Applications of Agnostic {PAC}-Learning with Small Decision Trees},
     booktitle = {},
     year = {1995},
     pages = {21--29},
@@ -489,7 +491,12 @@ author={C. Rudin and B. Letham and D. Madigan},
     year      = "2013"
 }
 
-
+@article{Larus-Stone17,
+    title={\textit{Learning Certifiably Optimal Rule Lists: {A} Case For Discrete Optimization in the 21st Century}},
+    author={N. L. Larus-Stone},
+    note={Undergraduate thesis, Harvard College},
+    year={2017}
+}
 
 @phdthesis{ruping2006learning,
   title={Learning interpretable models},
@@ -1399,7 +1406,7 @@ year = {2007}
 @article{goodman2016eu,
 __Author = {Goodman, Bryce and Flaxman, Seth},
 Author = {Goodman, B. and Flaxman, S.},
-	Journal = {arXiv preprint arXiv:1606.08813},
+	Journal = {Preprint at arXiv:1606.08813},
 	Title = {{EU} regulations on algorithmic decision-making and a ``right to explanation"},
 	Year = {2016}}
 
