--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -225,7 +225,9 @@ black box algorithm for recidivism prediction.
 \begin{arxiv}
 black box algorithm for recidivism prediction. \\
 
-Our implementation of CORELS is at \textbf{\url{https://github.com/nlarusstone/corels}}.
+Our implementation of CORELS is at
+\textbf{\url{https://github.com/nlarusstone/corels}}.~\footnote{Our work
+overlaps with the thesis presented by~\citet{Larus-Stone17}.}
 \end{arxiv}
 
 %\bibliographystyle{abbrvnat}
