Minor bib formatting things

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -830,7 +830,7 @@ author = {B. Liu and W. Hsu and Y. Ma},
 @article{Li01,
 __author = {Wenmin Li and Jiawei Han and Jian Pei},
 author = {W. Li and J. Han and J. Pei},
- title = {{CMAR}: accurate and efficient classification based on multiple class-association rules},
+ title = {{CMAR}: {A}ccurate and efficient classification based on multiple class-association rules},
  journal = {IEEE International Conference on Data Mining},
  year = {2001},
  pages = {369--376}
@@ -839,7 +839,7 @@ author = {W. Li and J. Han and J. Pei},
 @inproceedings{Yin03,
 __author = {Xiaoxin Yin and Jiawei Han},
 author = {X. Yin and J. Han},
- title = {CPAR: classification based on predictive association rules},
+ title = {{CPAR}: {C}lassification based on predictive association rules},
  booktitle = {Proceedings of the 2003 SIAM International Conference on Data Mining},
  series={ICDM '03},
  year = {2003},
@@ -870,7 +870,7 @@ author = {X. Yin and J. Han},
 
 @article{Han07,
  author = {Jiawei Han and Hong Cheng and Dong Xin and Xifeng Yan},
- title = {Frequent pattern mining: current status and future directions},
+ title = {Frequent pattern mining: {C}urrent status and future directions},
  journal = {Data Mining and Knowledge Discovery},
  volume = {15},
  issue = {1},
@@ -903,7 +903,7 @@ year = {2011}
 
 @Book{Hastie01,
 author = {Trevor Hastie and Robert Tibshirani and Jerome H. Friedman},
-title = {The elements of statistical learning: data mining, inference, and prediction},
+title = {The elements of statistical learning: {D}ata mining, inference, and prediction},
 publisher = {Springer, New York },
 year = {2001}
 }
