Minor bib edits

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -93,7 +93,7 @@ month = "03",
 number = "1",
 pages = "365--394",
 publisher = "The Institute of Mathematical Statistics",
-title = "Precinct or prejudice? Understanding racial disparities in New York City’s stop-and-frisk policy",
+title = {Precinct or prejudice? {U}nderstanding racial disparities in {N}ew {Y}ork {C}ity's stop-and-frisk policy},
 volume = "10",
 year = "2016"
 }
@@ -1028,7 +1028,7 @@ __author={Koen Vanhoof and Beno\^{i}t Depaire},
 author={K. Vanhoof and B. Depaire},
   booktitle={Proceedings of the International Conference on Intelligent Systems and Knowledge Engineering},
   series={ISKE '10},
-  title={Structure of association rule classifiers: a review},
+  title={Structure of association rule classifiers: {A} review},
   year={2010},
   pages={9--12}
 }
@@ -1333,8 +1333,8 @@ Author = {Huysmans, J. and Dejaeger, K. and Mues, C. and Vanthienen, J. and Baes
 }
 
 @article{Freitas14,
-__Author = {Freitas, Alex A},
-Author = {Freitas, A. A},
+__Author = {Freitas, Alex A.},
+Author = {Freitas, A. A.},
   Journal = {ACM SIGKDD Explorations Newsletter},
   Number = {1},
   Pages = {1--10},
