EA acks -- mention members of RISELab

--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -81,8 +81,8 @@ C.D.R. is supported in part by MIT-Lincoln Labs.
 %
 E.A. would like to thank E. Jonas, E. Kohler, and S. Tu for early implementation
 guidance, A.~D'Amour for pointing out the work by~\citet{Goel16},
-J.~Schleier-Smith and E.~Thewalt for helpful conversations, and
-members of SAIL and the UC Berkeley Database Group for their support and feedback.
+J.~Schleier-Smith and E.~Thewalt for helpful conversations, and members of RISELab,
+SAIL, and the UC Berkeley Database Group for their support and feedback.
 %
 We thank H.~Yang and B.~Letham for sharing advice and code for processing data
 and mining rules.
